--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-cors": "0.0.3",
     "jsonwebtoken": "^8.3.0",
+    "nunjucks": "^3.2.0",
     "pg": "^7.5.0",
     "supertest": "^4.0.2"
   }
